// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/atoms/Button Primary 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  background-color: #3ee7cd;
  -webkit-transform: skew(45deg);
  -ms-transform: skew(45deg);
  transform: skew(45deg);
  padding: 0.9rem 3.7rem;
  border: none;
  box-shadow: -5px 5px 14px 0px rgba(0,0,0,0.2);
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  font-family: montserrat;
  cursor: pointer;
  color: #fff;
}

.c1:hover {
  background-color: #42beab;
  color: #fff;
}

.c1:active {
  background-color: #42beab;
  box-shadow: -3px 3px 14px 0px rgba(129,67,67,0.2);
}

.c1:disabled {
  background-color: $gray;
}

.c1:disabled,
.c1:disabled:hover {
  cursor: default;
}

.c2 {
  display: inline-block;
  font-size: 1.125rem;
  text-transform: uppercase;
  font-weight: 600;
  line-height: 1.25rem;
  -webkit-transform: skew(-45deg);
  -ms-transform: skew(-45deg);
  transform: skew(-45deg);
}

@media (max-width:540px) {
  .c1 {
    padding: 0.9rem 1rem;
    width: 88%;
    max-width: 88%;
  }
}

<div
  className="c0"
>
  <button
    className="c1"
    color="primary"
  >
    <span
      className="c2"
    >
      Primary Button
    </span>
  </button>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots @components/atoms/Button Secondary 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  background-color: #fff;
  -webkit-transform: skew(45deg);
  -ms-transform: skew(45deg);
  transform: skew(45deg);
  padding: 0.9rem 3.7rem;
  border: none;
  box-shadow: -5px 5px 14px 0px rgba(0,0,0,0.2);
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  font-family: montserrat;
  cursor: pointer;
  color: #21125e;
  box-shadow: inset 0px 0px 0px 3px #21125e;
  border-left: 1px solid #21125e;
  border-right: 1px solid #21125e;
}

.c1:hover {
  background-color: #21125e;
  color: #fff;
}

.c1:active {
  background-color: #190c4e;
  box-shadow: -3px 3px 14px 0px rgba(129,67,67,0.2);
}

.c1:disabled {
  background-color: $gray;
}

.c1:disabled,
.c1:disabled:hover {
  cursor: default;
}

.c2 {
  display: inline-block;
  font-size: 1.125rem;
  text-transform: uppercase;
  font-weight: 600;
  line-height: 1.25rem;
  -webkit-transform: skew(-45deg);
  -ms-transform: skew(-45deg);
  transform: skew(-45deg);
}

@media (max-width:540px) {
  .c1 {
    padding: 0.9rem 1rem;
    width: 88%;
    max-width: 88%;
  }
}

<div
  className="c0"
>
  <button
    className="c1"
    color="secondary"
  >
    <span
      className="c2"
    >
      Secondary Button
    </span>
  </button>
  <div
    className="c3"
  />
</div>
`;
